--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
-ko_fi: shenxianpeng
+# ko_fi: shenxianpeng
 # custom: ["https://www.paypal.me/shenxianpeng"]
