--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -53,7 +53,6 @@ exclude-labels:
   - invalid
 
 change-template: '- $TITLE by @$AUTHOR in #$NUMBER'
-footer: **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION 
 
 # https://github.com/release-drafter/release-drafter?tab=readme-ov-file#version-resolver
 version-resolver:
@@ -71,6 +70,8 @@ version-resolver:
 template: |
   <!-- Optional: add a release summary here -->
   $CHANGES
+
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION 
 
 autolabeler:
   - label: 'documentation'
