chore: Update release-drafter.yml

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -26,7 +26,7 @@ categories:
   - title: 🌐 Localization and translation
     labels:
       - localization
-  - title: 👷 Changes for plugin developers
+  - title: 👷 Changes for developers
     labels:
       - developer
   - title: 📝 Documentation updates
